--- a/css/classes.css
+++ b/css/classes.css
@@ -609,6 +609,21 @@ tt > a:visited:active,
 var > a:visited:active {
   color: #4D42FF;
 }
+.main-nav ul {
+  background-color: #3399FF;
+  color: white;
+  flex-direction: row;
+  flex-wrap: wrap;
+  font-size: 1.25rem;
+  justify-content: space-around;
+}
+.main-nav ul li {
+  flex-grow: 1;
+}
+.main-nav ul a {
+  text-align: center;
+  padding: 0.5em;
+}
 .minor-header {
   font-size: 1.25em;
 }
@@ -759,7 +774,7 @@ var > .tooltip {
   text-decoration: underline dotted #00F39D;
 }
 .unicode {
-  font-family: 'Gentium Plus', 'Charis SIL', 'Doulos SIL', 'Andika', 'Lucida Sans Unicode', 'Times New Roman', 'Georgia', serif;
+  font-family: 'Gentium Plus', 'Charis SIL', 'Doulos SIL', 'Cambria', 'Andika', 'Lucida Sans Unicode', 'Times New Roman', 'Georgia', serif;
   font-size: 1.15em;
 }
 .white-link {
