--- a/css/global.css
+++ b/css/global.css
@@ -251,7 +251,7 @@ code {
   background-color: #F5F2F0;
   border: 1px solid black;
   border-radius: 5px;
-  font-family: 'Fira Mono', 'Monaco', 'DejaVu Mono', 'Courier New', monospace;
+  font-family: 'Consolas', 'Fira Mono', 'Monaco', 'DejaVu Mono', 'Courier New', monospace;
   font-size: 0.75em;
   font-style: normal;
   overflow-x: auto;
