--- a/less/classes.less
+++ b/less/classes.less
@@ -170,6 +170,25 @@ This file contains DLx styles that need to be explicitly specified using classes
     }
   }
 
+.main-nav ul {
+
+  .blue-background;
+  flex-direction: row;
+  flex-wrap: wrap;
+  font-size: 1.25rem;
+  justify-content: space-around;
+
+  li {
+    flex-grow: 1;
+  }
+
+  a {
+    text-align: center;
+    padding: 0.5em;
+  }
+
+}
+
 .minor-header {
   font-size: 1.25em;
 }
@@ -279,7 +298,7 @@ This file contains DLx styles that need to be explicitly specified using classes
   }
 
 .unicode {
-  font-family: 'Gentium Plus', 'Charis SIL', 'Doulos SIL', 'Andika', 'Lucida Sans Unicode', 'Times New Roman', 'Georgia', serif;
+  font-family: 'Gentium Plus', 'Charis SIL', 'Doulos SIL', 'Cambria', 'Andika', 'Lucida Sans Unicode', 'Times New Roman', 'Georgia', serif;
   font-size: 1.15em;
 }
 
