--- a/less/global.less
+++ b/less/global.less
@@ -31,7 +31,7 @@ code {
   .gray-background;
   border: 1px solid black;
   border-radius: 5px;
-  font-family: 'Fira Mono', 'Monaco', 'DejaVu Mono', 'Courier New', monospace;
+  font-family: 'Consolas', 'Fira Mono', 'Monaco', 'DejaVu Mono', 'Courier New', monospace;
   font-size: 0.75em;
   font-style: normal;
   overflow-x: auto;
