--- a/patterns/patterns.less
+++ b/patterns/patterns.less
@@ -1,4 +1,7 @@
-@import '../less/dlx.less';
+@import '../less/fonts.less';
+@import '../less/colors.less';
+@import '../less/classes.less';
+@import '../less/global.less';
 
 body {
 
@@ -123,6 +126,10 @@ body {
 .field-example input {
   margin: 0.5em;
   width: 80%;
+}
+
+.main-nav-example .rendered {
+  align-items: stretch;
 }
 
 .white-link-example .rendered p {
