--- a/examples/nav.hbs
+++ b/examples/nav.hbs
@@ -1,4 +1,4 @@
-<nav class=main-nav>
+<nav class=nav>
   <ul>
     <li><a href=#main-nav>Nav Link 1</a></li>
     <li><a href=#main-nav>Nav Link 2</a></li>
