compile Handlebars templates

--- a/hbs/partials/patterns.hbs
+++ b/hbs/partials/patterns.hbs
@@ -12,7 +12,9 @@
 
       <div>
         <h1 class=header-minor>Example Markup</h1>
-        <code class=markup>{{html}}</code>
+        <code class=markup>
+{{html}}
+        </code>
       </div>
 
       <div>
