--- a/hbs/index.hbs
+++ b/hbs/index.hbs
@@ -52,8 +52,12 @@
 
     {{> patterns}}
 
-    <script src=js/patterns.js></script>
+    {{!-- <script src=js/patterns.js></script> --}}
     <script src=js/highlight.js></script>
+
+    <script>
+      hljs.initHighlightingOnLoad();
+    </script>
 
   </body>
 
