--- a/hbs/partials/patterns.hbs
+++ b/hbs/partials/patterns.hbs
@@ -12,9 +12,8 @@
 
       <div>
         <h1 class=header-minor>Example Markup</h1>
-        <code class=markup>
-{{html}}
-        </code>
+        <pre><code class=markup>
+{{html}}</code></pre>
       </div>
 
       <div>
