--- a/examples/code.hbs
+++ b/examples/code.hbs
@@ -2,11 +2,13 @@
   This is an example of a paragraph with <code>inline code</code>. Below is an example of a standalone code block.
 </p>
 
-<code>{
+<code>
+{
   "dateCreated": "2017-03-13T02:36:22.123Z",
   "dateModified": "2017-03-13T04:51:26.134Z",
   "name": {
     "eng": "Chitimacha",
     "ctm": "Sitimaxa"
   }
-}</code>
+}
+</code>
