use classes for everything

--- a/examples/cite.hbs
+++ b/examples/cite.hbs
@@ -1,3 +1,3 @@
 <p>
-  In his review of <cite>Endangered languages and new technologies</cite>, Hieber (2015) mentions certain concepts in Digital Linguistics.
+  In his review of <cite class=cite>Endangered languages and new technologies</cite>, Hieber (2015) mentions certain concepts in Digital Linguistics.
 </p>
