--- a/examples/input.hbs
+++ b/examples/input.hbs
@@ -1,120 +1,120 @@
-<label>
+<label class=label>
   <span>Button</span>
-  <input type=button value=Button>
+  <input class=input type=button value=Button>
 </label>
 
-<label>
+<label class=label>
   <span>Checkbox</span>
-  <input type=checkbox>
+  <input class=input type=checkbox>
 </label>
 
-<label>
+<label class=label>
   <span>Color</span>
-  <input type=color>
+  <input class=input type=color>
 </label>
 
-<label>
+<label class=label>
   <span>Date</span>
-  <input type=date>
+  <input class=input type=date>
 </label>
 
-<label>
+<label class=label>
   <span>Datetime</span>
-  <input type=datetime>
+  <input class=input type=datetime>
 </label>
 
-<label>
+<label class=label>
   <span>Datetime Local</span>
-  <input type=datetime-local>
+  <input class=input type=datetime-local>
 </label>
 
-<label>
+<label class=label>
   <span>Email</span>
-  <input type=email value=name@domain.com>
+  <input class=input type=email value=name@domain.com>
 </label>
 
-<label>
+<label class=label>
   <span>File</span>
-  <input type=file>
+  <input class=input type=file>
 </label>
 
-<label>
+<label class=label>
   <span>Hidden</span>
-  <input type=hidden value='This input is hidden'>
+  <input class=input type=hidden value='This input is hidden'>
 </label>
 
-<label>
+<label class=label>
   <span>Image</span>
-  <input type=image src=../img/tunnel.svg>
+  <input class=input type=image src=img/tunnel.svg>
 </label>
 
-<label>
+<label class=label>
   <span>Month</span>
-  <input type=month>
+  <input class=input type=month>
 </label>
 
-<label>
+<label class=label>
   <span>Number</span>
-  <input type=number value=1000>
+  <input class=input type=number value=1000>
 </label>
 
-<label>
+<label class=label>
   <span>Password</span>
-  <input type=password value=password>
+  <input class=input type=password value=password>
 </label>
 
 <fieldset>
-  <label>
+  <label class=label>
     <span>Radio 1</span>
-    <input type=radio name=radio>
+    <input class=input type=radio name=radio>
   </label>
-  <label>
+  <label class=label>
     <span>Radio 2</span>
-    <input type=radio name=radio>
+    <input class=input type=radio name=radio>
   </label>
 </fieldset>
 
-<label>
+<label class=label>
   <span>Range</span>
-  <input type=range>
+  <input class=input type=range>
 </label>
 
-<label>
+<label class=label>
   <span>Reset</span>
-  <input type=reset value=Reset>
+  <input class=input type=reset value=Reset>
 </label>
 
-<label>
+<label class=label>
   <span>Search</span>
-  <input type=search value=Search>
+  <input class=input type=search value=Search>
 </label>
 
-<label>
+<label class=label>
   <span>Submit</span>
-  <input type=submit value=Submit>
+  <input class=input type=submit value=Submit>
 </label>
 
-<label>
+<label class=label>
   <span>Telephone</span>
-  <input type=tel value='A telephone input'>
+  <input class=input type=tel value='A telephone input'>
 </label>
 
-<label>
+<label class=label>
   <span>Text</span>
-  <input type=text value='A text input'>
+  <input class=input type=text value='A text input'>
 </label>
 
-<label>
+<label class=label>
   <span>Time</span>
-  <input type=time>
+  <input class=input type=time>
 </label>
 
-<label>
+<label class=label>
   <span>URL</span>
-  <input type=url>
+  <input class=input type=url>
 </label>
 
-<label>
+<label class=label>
   <span>Week</span>
-  <input type=week>
+  <input class=input type=week>
 </label>
