--- a/examples/label.hbs
+++ b/examples/label.hbs
@@ -1,9 +1,9 @@
-<label>
+<label class=label>
   <span>Label with <code>&lt;span&gt;</code></span>
-  <input type=text>
+  <input class=input type=text>
 </label>
 
-<label>
+<label class=label>
   Label without <code>&lt;span&gt;</code>
-  <input type=text>
+  <input class=input type=text>
 </label>
