--- a/hbs/partials/patterns.hbs
+++ b/hbs/partials/patterns.hbs
@@ -3,7 +3,7 @@
   <h1 class=section-header>Patterns</h1>
 
   {{#each patterns}}
-    <section id={{@key}} class='pattern {{@key}}-example'>
+    <section id={{@key}}-pattern class='pattern {{@key}}-example'>
 
       <header>
         <h1 class='pattern-title header-subsection'><code>{{@key}}</code></h1>
