--- a/examples/abbr.hbs
+++ b/examples/abbr.hbs
@@ -1,3 +1,3 @@
 <p>
-  <dfn>Digital Linguistics</dfn> (<abbr>DLx</abbr>) is the science of managing linguistic data, digitally. This is an example of a paragraph with an abbreviation tag.
+  <dfn class=dfn>Digital Linguistics</dfn> (<abbr class=abbr>DLx</abbr>) is the science of managing linguistic data, digitally. This is an example of a paragraph with an abbreviation tag.
 </p>
