--- a/examples/code.hbs
+++ b/examples/code.hbs
@@ -1,8 +1,8 @@
 <p>
-  This is an example of a paragraph with <code>inline code</code>. Below is an example of a standalone code block.
+  This is an example of a paragraph with <code class=code>inline code</code>. Below is an example of a standalone code block.
 </p>
 
-<code>
+<code class=code>
 {
   "dateCreated": "2017-03-13T02:36:22.123Z",
   "dateModified": "2017-03-13T04:51:26.134Z",
