--- a/examples/dfn.hbs
+++ b/examples/dfn.hbs
@@ -1,3 +1,3 @@
 <p>
-  <dfn>Digital Linguistics</dfn> (<abbr>DLx</abbr>) is the science of managing linguistic data, digitally.
+  <dfn class=dfn>Digital Linguistics</dfn> (<abbr class=abbr>DLx</abbr>) is the science of managing linguistic data, digitally.
 </p>
