--- a/examples/strong.hbs
+++ b/examples/strong.hbs
@@ -1,3 +1,3 @@
 <p>
-  This is a paragraph with some <strong>strongly emphasized</strong> text.
+  This is a paragraph with some <strong class=strong>strongly emphasized</strong> text.
 </p>
