add link to readme

--- a/hbs/index.hbs
+++ b/hbs/index.hbs
@@ -2,6 +2,7 @@
 <html lang=en>
 
   <head>
+
     <meta charset=utf-8>
     <title>DLx Pattern Library</title>
     <meta name=author content='Daniel W. Hieber'>
@@ -35,7 +36,10 @@
 
     <h1 class=page-title>DLx Pattern Library</h1>
 
+    <p>See the <a href=https://github.com/digitallinguistics/styles#readme>GitHub repository</a> for instructions on how to use DLx styles in your code.</p>
+
     <nav>
+      <h2 class=header-section>Contents</h2>
       <ul class=bulleted>
         <li><a class=link href=#variables>Variables</a></li>
         <li><a class=link href=#typography>Typography</a></li>
