--- a/hbs/partials/variables.hbs
+++ b/hbs/partials/variables.hbs
@@ -1,6 +1,6 @@
 <section id=variables>
 
-  <h1 class=section-header>Variables</h2>
+  <h1 class=header-section>Variables</h2>
 
   <p>The following LESS variables are available:</p>
 
