--- a/hbs/partials/patterns.hbs
+++ b/hbs/partials/patterns.hbs
@@ -1,13 +1,13 @@
 <section id=patterns>
 
-  <h1 class=section-header>Patterns</h1>
+  <h1 class=header-section>Patterns</h1>
 
   {{#each patterns}}
     <section id={{@key}}-pattern class='pattern {{@key}}-example'>
 
       <header>
         <h1 class='pattern-title header-subsection'><code>{{@key}}</code></h1>
-        <p class=pattern-description>{{description}}</p>
+        <p class=pattern-description>{{{description}}}</p>
       </header>
 
       <div>
